<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_baseline_chat_24px"
        android:title="@string/menu_chat" />

    <item
        android:id="@+id/navigation_trivia"
        android:icon="@drawable/ic_baseline_slideshow_24px"
        android:title="@string/menu_trivia" />


    <item
        android:id="@+id/navigation_team"
        android:checkable="false"
        android:enabled="false"
        android:icon="@drawable/ic_baseline_group_24px"
        android:title="@string/menu_team" />
    <item
        android:id="@+id/navigation_scores"
        android:checkable="false"
        android:enabled="false"
        android:icon="@drawable/ic_baseline_poll_24px"
        android:title="@string/menu_scores" />

</menu>
