<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/teamPlaceScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:layout_marginStart="8sp"
        android:text="@string/place" />

    <TextView
        android:id="@+id/teamNameScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="12"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/teamname" />

    <TextView
        android:id="@+id/teamScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:text="@string/score" />
</LinearLayout>